<resources>
    <string name="app_name">MyStories</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="i_accept_terms">I accept terms and conditions</string>
    android:layout_marginStart="16dp"
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="enter_title">Enter Title here</string>
    <string name="enter_sub_title">Enter Sub-Title here</string>
    <string name="enter_description">Enter Description here</string>
    <string name="close">Close</string>
    <string name="add_story">Add Story</string>
    <string name="story1_title">My first story</string>
    <string name="story1_subtitle">This is subtitle</string>
    <string name="story1_desc">
          In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
          In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin
        In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin


    </string>
    <string name="forgot_password">Forgot Password?</string>
</resources>